fixed button to link with signup and sign in pages

--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -61,8 +61,14 @@
                 <li><a href = "FAQ.html">FAQ</a></li>
                 <li><a href = "contact.html">Contact Us</a></li>
             </ul>
-            <button class = "btn sign-up">SIGN UP</button>
-            <button class = "btn log-in">LOG IN</button>
+            <!-- <button class = "btn sign-up">SIGN UP</button> -->
+             <form action="./signup.html">
+                    <input type="submit" class = "head-btn" value="SIGN UP" />
+             </form>
+            <!-- <button class = "btn log-in">LOG IN</button> -->
+             <form action="./signin.html">
+                    <input type="submit" class = "head-btn" value="SIGN IN" />
+             </form>
         </div>
         <!-- End of Side Navbar -->
 
