--- a/hotel-gp-single-page-site-master/signup.html
+++ b/hotel-gp-single-page-site-master/signup.html
@@ -26,8 +26,13 @@
     <div class="sign-up">
         <form class = "sign-up-form">
             <h1>Sign Up</h1>
+            <input type="text" class="signup-input-box" placeholder="Your First Name">
+            <input type="text" class="signup-input-box" placeholder="Your Last Name">
+            <label for = "sign-up-dob">Date Of Birth: </label>
+            <input type = "date" class="signup-dob">
             <input type="email" class="signup-input-box" placeholder="Your Email">
             <input type="password" class="signup-input-box" placeholder="Your Password">
+            <input type="password" class="signup-input-box" placeholder="Confirm Password">
             <button type="button" class="sign-up-btn">Register</button>
         </form>
     </div>
@@ -84,3 +89,4 @@
 </footer>
         <!-- End of footer -->
 </html>
+
