--- a/hotel-gp-single-page-site-master/signup.html
+++ b/hotel-gp-single-page-site-master/signup.html
@@ -26,16 +26,18 @@
     <div class="sign-up">
         <form class = "sign-up-form">
             <h1>Sign Up</h1>
-            <input type="text" class="signup-input-box" placeholder="Your First Name">
-            <input type="text" class="signup-input-box" placeholder="Your Last Name">
+            <input type="text" id = "signup_first_name" class="signup-input-box" placeholder="Your First Name">
+            <input type="text" id = "signup_last_name" class="signup-input-box" placeholder="Your Last Name">
             <label for = "sign-up-dob">Date Of Birth: </label>
-            <input type = "date" class="signup-dob">
-            <input type="email" class="signup-input-box" placeholder="Your Email">
-            <input type="password" class="signup-input-box" placeholder="Your Password">
-            <input type="password" class="signup-input-box" placeholder="Confirm Password">
-            <button type="button" class="sign-up-btn">Register</button>
+            <input type = "date" id = "signup_dob" class="signup-dob">
+            <input type="email" id = "signup_email" class="signup-input-box" placeholder="Your Email">
+            <input type="password" id = "signup_password" class="signup-input-box" placeholder="Your Password">
+            <input type="password" id = "signup_passwordCon" class="signup-input-box" placeholder="Confirm Password">
+            <button type="button" onclick="registerUser()" class="sign-up-btn">Register</button>
         </form>
     </div>
+
+    <script src="accounts.js"></script>
 </body>
 
 
@@ -89,4 +91,3 @@
 </footer>
         <!-- End of footer -->
 </html>
-
