adding link to sign in

--- a/hotel-gp-single-page-site-master/signup.html
+++ b/hotel-gp-single-page-site-master/signup.html
@@ -34,6 +34,7 @@
             <input type="password" id = "signup_password" class="signup-input-box" placeholder="Your Password">
             <input type="password" id = "signup_passwordCon" class="signup-input-box" placeholder="Confirm Password">
             <button type="button" onclick="registerUser()" class="sign-up-btn">Register</button>
+            <div>Already have an account? <a href = "signin.html">Sign In</a></div>
         </form>
     </div>
 
