--- a/hotel-gp-single-page-site-master/confirmation.html
+++ b/hotel-gp-single-page-site-master/confirmation.html
@@ -17,6 +17,22 @@
     </head>
   
      <!-- End of Confirmation  -->
+
+<body>
+    <header>
+        <div class="heading">BestMate Paradise</div>
+        <!-- FIXED HEADER FOR PAGE -->
+        <div class="navbar_fixed">
+            <a href="./index.html">Home</a>
+            <a href="./faq.html">FAQ</a>
+            <a href="./contact.html">Contact Us</a>
+            <a href="./booking.html">Booking</a>
+            <a href="./about.html">About Us</a>
+            <a href="./signup.html">Create an Account</a>
+            <a href="./privacy.html">Privacy Policy</a>
+        </div>
+        <!-- END OF FIXED HEADER -->
+    </header>
     <section class = "services sec-width" id = "Services">
             <div class = "title">
                 <h2>Confirmation</h2>
@@ -82,4 +98,5 @@
                 </div>
             </div>
         </footer>
+</body>
         <!-- End of footer -->
