adding fixed header

--- a/hotel-gp-single-page-site-master/contact.html
+++ b/hotel-gp-single-page-site-master/contact.html
@@ -7,6 +7,22 @@
         <link rel = "icon" href = "images/logo.png" type = "image/png">
     </head>
 
+<body>
+    <header>
+        <div class="heading">BestMate Paradise</div>
+        <!-- FIXED HEADER FOR PAGE -->
+        <div class="navbar_fixed">
+            <a href="./index.html">Home</a>
+            <a href="./faq.html">FAQ</a>
+            <a href="./contact.html">Contact Us</a>
+            <a href="./booking.html">Booking</a>
+            <a href="./about.html">About Us</a>
+            <a href="./signup.html">Create an Account</a>
+            <a href="./privacy.html">Privacy Policy</a>
+        </div>
+        <!-- END OF FIXED HEADER -->
+    </header>
+
 <!-- Footer -->
         <footer class = "footer">
             <div class = "footer-container">
@@ -56,3 +72,4 @@
             </div>
         </footer>
         <!-- End of footer -->
+</body>
