--- a/hotel-gp-single-page-site-master/privacy.html
+++ b/hotel-gp-single-page-site-master/privacy.html
@@ -8,6 +8,20 @@
     </head>
 
 <body>
+    <header>
+        <div class="heading">BestMate Paradise</div>
+        <!-- FIXED HEADER FOR PAGE -->
+        <div class="navbar_fixed">
+            <a href="./index.html">Home</a>
+            <a href="./faq.html">FAQ</a>
+            <a href="./contact.html">Contact Us</a>
+            <a href="./booking.html">Booking</a>
+            <a href="./about.html">About Us</a>
+            <a href="./signup.html">Create an Account</a>
+            <a href="./privacy.html">Privacy Policy</a>
+        </div>
+        <!-- END OF FIXED HEADER -->
+    </header>
     <!-- Privacy Policy -->
     
     <section class = "services sec-width" id = "Services">
