tried to add sidebar instead of top

--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -13,7 +13,7 @@
     <header>
         <div class="heading">BestMate Paradise</div>
         <!-- FIXED HEADER FOR PAGE -->
-        <div class="navbar_fixed">
+       <!-- <div class="navbar_fixed">
             <a href="./index.html">Home</a>
             <a href="./faq.html">FAQ</a>
             <a href="./contact.html">Contact Us</a>
@@ -22,7 +22,14 @@
             <a href="./signup.html">Create an Account</a>
             <a href="./privacy.html">Privacy Policy</a>
         </div>
-        <!-- END OF FIXED HEADER -->
+        <!-- END OF FIXED HEADER --> 
+          <div class = "site-nav">
+              <span id = "nav-btn">MENU <i class = "fas fa-bars"></i></span>
+          </div>
+     
+          <div class = "site-name">
+              <span>BESTMATE PARADISE HOTEL</span>
+          </div>
     </header>
         <section class = "services sec-width" id = "Services">
             <div class = "title">
@@ -155,5 +162,6 @@
                 </div>
             </div>
         </footer>
+   <script src="nav-bar-action.js"></script>
         <!-- End of footer -->
 </html>
