--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -11,7 +11,7 @@
 <!-- FAQ -->
   <body>
     <header>
-        <div class="heading">BestMate Paradise</div>
+        <!-- <div class="heading">BestMate Paradise</div> -->
         <!-- FIXED HEADER FOR PAGE -->
        <!-- <div class="navbar_fixed">
             <a href="./index.html">Home</a>
@@ -23,6 +23,7 @@
             <a href="./privacy.html">Privacy Policy</a>
         </div>
         <!-- END OF FIXED HEADER --> 
+     
          <div class = "head-top">
                 <div class = "site-nav">
                     <span id = "nav-btn">MENU <i class = "fas fa-bars"></i></span>
