--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -12,8 +12,11 @@
   <body>
     <header>
         <!-- <div class="heading">BestMate Paradise</div> -->
+         <div class = "title">
+                <h2>FAQ</h2>
+         </div>
         <!-- FIXED HEADER FOR PAGE -->
-       <!-- <div class="navbar_fixed">
+        <div class="navbar_fixed">
             <a href="./index.html">Home</a>
             <a href="./faq.html">FAQ</a>
             <a href="./contact.html">Contact Us</a>
@@ -36,9 +39,6 @@
             </div>
     </header>
         <section class = "services sec-width" id = "Services">
-            <div class = "title">
-                <h2>FAQ</h2>
-            </div>
             <div class = "services-container">
                 <!-- FAQ 1 -->
                 <article class = "service">
