--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -9,11 +9,13 @@
 </head>
 
 <!-- FAQ -->
-  <body>
     <header>
         <!-- <div class="heading">BestMate Paradise</div> -->
          <div class = "title">
                 <h2>FAQ</h2>
+         </div>
+         <div>
+          
          </div>
         <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
@@ -27,6 +29,7 @@
         </div>
         <!-- END OF FIXED HEADER --> 
     </header>
+    <body>
         <section class = "services sec-width" id = "Services">
             <div class = "services-container">
                 <!-- FAQ 1 -->
