--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -10,7 +10,9 @@
     </head>
     <body>
         <header>
-        <div class="heading">BestMate Paradise</div>
+            <div class = "title">
+                <h2>Booking Page</h2>
+            </div>
         <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
           <a href="./index.html">Home</a>
