--- a/hotel-gp-single-page-site-master/confirmation.html
+++ b/hotel-gp-single-page-site-master/confirmation.html
@@ -20,7 +20,9 @@
 
 <body>
     <header>
-        <div class="heading">BestMate Paradise</div>
+         <div class = "title">
+                <h2>BOOKING CONFIRMED</h2>
+         </div>
         <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
             <a href="./index.html">Home</a>
