--- a/hotel-gp-single-page-site-master/privacy.html
+++ b/hotel-gp-single-page-site-master/privacy.html
@@ -9,8 +9,9 @@
 
 <body>
     <header>
-        <div class="heading">BestMate Paradise</div>
-        <!-- FIXED HEADER FOR PAGE -->
+         <div class = "title">
+                <h2>Privacy Policy</h2>
+         </div>        <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
             <a href="./index.html">Home</a>
             <a href="./faq.html">FAQ</a>
