--- a/hotel-gp-single-page-site-master/signup.html
+++ b/hotel-gp-single-page-site-master/signup.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <div class="heading">BestMate Paradise</div>
+        <div class = "title">
+                <h2>Sign Up</h2>
+        </div> 
         <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
             <a href="./index.html">Home</a>
