linked button to sign in confirmation html

--- a/hotel-gp-single-page-site-master/signin.html
+++ b/hotel-gp-single-page-site-master/signin.html
@@ -29,8 +29,10 @@
             <h1>Sign In</h1>
             <input type="email" class="signup-input-box" placeholder="Your Email">
             <input type="password" class="signup-input-box" placeholder="Your Password">
-            <button type="button" class="sign-up-btn">Log In</button>
-            <div>Don't have an account? <a href = "signup.html">Sign Up</a></div>
+            <form action="./signinconfirmation.html">
+                 <input type="submit" class = "head-btn" value="LOG IN" />
+            </form>            
+           <div>Don't have an account? <a href = "signup.html">Sign Up</a></div>
         </form>
         
     </div>
