--- a/hotel-gp-single-page-site-master/signin.html
+++ b/hotel-gp-single-page-site-master/signin.html
@@ -30,7 +30,7 @@
             <input type="email" class="signup-input-box" placeholder="Your Email">
             <input type="password" class="signup-input-box" placeholder="Your Password">
             <form action="./signinconfirmation.html">
-                 <input type="submit" class = "head-btn" value="LOG IN" />
+                <button type="button" class = "sign-up-btn"> "LOG IN"</button>
             </form>            
            <div>Don't have an account? <a href = "signup.html">Sign Up</a></div>
         </form>
