--- a/hotel-gp-single-page-site-master/signin.html
+++ b/hotel-gp-single-page-site-master/signin.html
@@ -29,7 +29,7 @@
             <h1>Sign In</h1>
             <input type="email" class="signup-input-box" placeholder="Your Email">
             <input type="password" class="signup-input-box" placeholder="Your Password">
-            <form action="./signinconfirmation.html">
+            <form action="signinconfirmation.html">
                 <button type="button" class = "sign-up-btn"> "LOG IN"</button>
             </form>            
            <div>Don't have an account? <a href = "signup.html">Sign Up</a></div>
