added sign in to footer

--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -320,6 +320,7 @@
                     <h2>Useful Links</h2>
                     <a href = "index.html">Home</a>
                     <a href = "signup.html">Create an account</a>
+                    <a href = "signin.html">Sign In</a>
                     <a href = "booking.html">Booking Page</a>
                     <a href = "about.html">About Us</a>
                     <a href = "FAQ.html">FAQ</a>
