added new footer

--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -110,18 +110,19 @@
 </body>
         <!-- End of FAQ -->
 
-   <!-- Footer -->
+    <!-- Footer -->
         <footer class = "footer">
             <div class = "footer-container">
                 <div>
                     <h2>About Us </h2>
-                    <a href = "#header">About Us</a>
+                    <a href = "about.html">About Us</a>
                 </div>
 
                 <div>
                     <h2>Useful Links</h2>
                     <a href = "index.html">Home</a>
                     <a href = "signup.html">Create an account</a>
+                    <a href = "signin.html">Sign In</a>
                     <a href = "booking.html">Booking Page</a>
                     <a href = "about.html">About Us</a>
                     <a href = "FAQ.html">FAQ</a>
@@ -158,6 +159,5 @@
                 </div>
             </div>
         </footer>
-   <script src="nav-bar-action.js"></script>
         <!-- End of footer -->
 </html>
