--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -200,18 +200,19 @@
         <!-- End of Side Navbar -->
                 
                 
-               <!-- Footer -->
+     <!-- Footer -->
         <footer class = "footer">
             <div class = "footer-container">
                 <div>
                     <h2>About Us </h2>
-                    <a href = "#header">About Us</a>
+                    <a href = "about.html">About Us</a>
                 </div>
 
                 <div>
                     <h2>Useful Links</h2>
                     <a href = "index.html">Home</a>
                     <a href = "signup.html">Create an account</a>
+                    <a href = "signin.html">Sign In</a>
                     <a href = "booking.html">Booking Page</a>
                     <a href = "about.html">About Us</a>
                     <a href = "FAQ.html">FAQ</a>
@@ -249,5 +250,5 @@
             </div>
         </footer>
         <!-- End of footer -->
-            </body>
-
+   </body>
+</html>
