--- a/hotel-gp-single-page-site-master/confirmation.html
+++ b/hotel-gp-single-page-site-master/confirmation.html
@@ -1,4 +1,7 @@
-  <head>
+
+<!DOCTYPE html>
+<html>
+<head>
         <meta charset="utf-8">
         <title>BESTMATE PARADISE HOTEL</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -61,6 +64,7 @@
                     <h2>Useful Links</h2>
                     <a href = "index.html">Home</a>
                     <a href = "signup.html">Create an account</a>
+                    <a href = "signin.html">Sign In</a>
                     <a href = "booking.html">Booking Page</a>
                     <a href = "about.html">About Us</a>
                     <a href = "FAQ.html">FAQ</a>
@@ -97,5 +101,6 @@
                 </div>
             </div>
         </footer>
-</body>
         <!-- End of footer -->
+</body>
+</html>
