--- a/hotel-gp-single-page-site-master/contact.html
+++ b/hotel-gp-single-page-site-master/contact.html
@@ -1,3 +1,5 @@
+<<!DOCTYPE html>
+<html>
 <head>
         <meta charset="utf-8">
         <title>BestMate Paradise Hotel</title>
@@ -36,6 +38,7 @@
                     <h2>Useful Links</h2>
                     <a href = "index.html">Home</a>
                     <a href = "signup.html">Create an account</a>
+                    <a href = "signin.html">Sign In</a>
                     <a href = "booking.html">Booking Page</a>
                     <a href = "about.html">About Us</a>
                     <a href = "FAQ.html">FAQ</a>
@@ -74,3 +77,4 @@
         </footer>
         <!-- End of footer -->
 </body>
+</html>
