added new footer

--- a/hotel-gp-single-page-site-master/privacy.html
+++ b/hotel-gp-single-page-site-master/privacy.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
         <meta charset="utf-8">
         <title>BestMate Paradise Hotel</title>
@@ -92,9 +94,6 @@
     </section>
     </body> 
 
-
-
-
 <!-- Footer -->
         <footer class = "footer">
             <div class = "footer-container">
@@ -107,6 +106,7 @@
                     <h2>Useful Links</h2>
                     <a href = "index.html">Home</a>
                     <a href = "signup.html">Create an account</a>
+                    <a href = "signin.html">Sign In</a>
                     <a href = "booking.html">Booking Page</a>
                     <a href = "about.html">About Us</a>
                     <a href = "FAQ.html">FAQ</a>
@@ -144,3 +144,4 @@
             </div>
         </footer>
         <!-- End of footer -->
+</html>
