--- a/hotel-gp-single-page-site-master/signup.html
+++ b/hotel-gp-single-page-site-master/signup.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -56,6 +57,7 @@
             <h2>Useful Links</h2>
             <a href = "index.html">Home</a>
             <a href = "signup.html">Create an account</a>
+            <a href = "signin.html">Sign In</a>
             <a href = "booking.html">Booking Page</a>
             <a href = "about.html">About Us</a>
             <a href = "FAQ.html">FAQ</a>
