--- a/hotel-gp-single-page-site-master/confirmation.html
+++ b/hotel-gp-single-page-site-master/confirmation.html
@@ -44,7 +44,7 @@
                 <article class = "service">
                     <div class = "service-content">
                         <h2>THANK YOU FOR YOUR BOOKING</h2>
-                        <p>We hope to see you soon !!</p>
+                        <p>We will be in touch shortly.</p>
                     </div>
                 </article>
                 <!-- End of Confirmation Message -->
