tried moving booking title
to put bestmate paradise back in header as total website heading

--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -10,10 +10,9 @@
     </head>
     <body>
         <header>
-            <div class = "title">
-                <h2>Booking Page</h2>
-            </div>
+            
         <!-- FIXED HEADER FOR PAGE -->
+        <div class="heading">BestMate Paradise</div>
         <div class="navbar_fixed">
           <a href="./index.html">Home</a>
           <a href="./faq.html">FAQ</a>
@@ -25,7 +24,9 @@
         </div>
         <!-- END OF FIXED HEADER -->
     </header>
-
+<div class = "title">
+                <h2>Booking Page</h2>
+</div>
 <div class = "book">
             <form class = "book-form">
                 <div class = "form-item">
