--- a/hotel-gp-single-page-site-master/signup.html
+++ b/hotel-gp-single-page-site-master/signup.html
@@ -10,9 +10,7 @@
 </head>
 <body>
     <header>
-        <div class = "title">
-                <h2>Sign Up</h2>
-        </div> 
+         <div class="heading">BestMate Paradise</div>
         <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
             <a href="./index.html">Home</a>
