--- a/hotel-gp-single-page-site-master/signin.html
+++ b/hotel-gp-single-page-site-master/signin.html
@@ -10,9 +10,8 @@
 </head>
 <body>
     <header>
-        <div class = "title">
-                <h2>Sign In</h2>
-        </div>        <!-- FIXED HEADER FOR PAGE -->
+         <div class="heading">BestMate Paradise</div>       
+        <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
             <a href="./index.html">Home</a>
             <a href="./faq.html">FAQ</a>
