--- a/hotel-gp-single-page-site-master/privacy.html
+++ b/hotel-gp-single-page-site-master/privacy.html
@@ -11,9 +11,8 @@
 
 <body>
     <header>
-         <div class = "title">
-                <h2>Privacy Policy</h2>
-         </div>        <!-- FIXED HEADER FOR PAGE -->
+         <div class="heading">BestMate Paradise</div>       
+            <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
             <a href="./index.html">Home</a>
             <a href="./faq.html">FAQ</a>
