--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -11,12 +11,7 @@
 <!-- FAQ -->
     <header>
         <!-- <div class="heading">BestMate Paradise</div> -->
-         <div class = "title">
-                <h2>FAQ</h2>
-         </div>
-         <div>
-          
-         </div>
+         <div class="heading">BestMate Paradise</div>
         <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
             <a href="./index.html">Home</a>
