putting faq heading below nav

--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -10,7 +10,6 @@
 
 <!-- FAQ -->
     <header>
-        <!-- <div class="heading">BestMate Paradise</div> -->
          <div class="heading">BestMate Paradise</div>
         <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
@@ -25,6 +24,9 @@
         <!-- END OF FIXED HEADER --> 
     </header>
     <body>
+     <div class="title">
+      <h2>FAQ</h2>
+     </div>
         <section class = "services sec-width" id = "Services">
             <div class = "services-container">
                 <!-- FAQ 1 -->
