adding the spacer to make nav bar not butcher content

--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -24,6 +24,8 @@
         <!-- END OF FIXED HEADER --> 
     </header>
     <body>
+     <div class = "spacer"
+          </div>
      <div class="title">
       <h2>FAQ</h2>
      </div>
