--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -24,7 +24,7 @@
         <!-- END OF FIXED HEADER --> 
     </header>
     <body>
-     <div class = "spacer"
+     <div class = "spacer">
           </div>
      <div class="title">
       <h2>FAQ</h2>
