--- a/hotel-gp-single-page-site-master/privacy.html
+++ b/hotel-gp-single-page-site-master/privacy.html
@@ -25,8 +25,11 @@
         <!-- END OF FIXED HEADER -->
     </header>
     <!-- Privacy Policy -->
+    <div class= "spacer">
+        </div>
     
     <section class = "services sec-width" id = "Services">
+            
         <!-- Opening -->
                 <div class = "privacy-top">
                     <center><h1>Privacy Policy</h1>
