--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -33,23 +33,38 @@
           BestMate Paradise Hotel has been around for 10 years, our mission is to provide a home for all pets that are left lonely when the owners want to go on a trip away from home. We aim to protect, love and caretake for the pets. We make sure all pets have the best health care physically and mentally. We make sure all pets come home in full care, happy and healthy. The hotel provides lots of fun for the pets, having various play areas. The toilets and food areas are kept clean by our caretakers as well.
       </p>
       <div class="skills">
-        <div 
-            <span>Web Design</span>
-            <p class="text">
-              Alisha Anusha Raphael Wilson Ahmad
-            </p>
-        </div
-        <div
-            <span>Photoshop & Illustrator</span>
-            <p class="text">
-              Alisha Anusha Raphael Wilson Ahmad
-            </p> 
-        </div
-        <div
-            <span>Coding</span>
-             <p class="text">
-              Alisha Anusha Raphael Wilson Ahmad
-            </p>
-        </div
+            <article class = "service">
+                    <div class = "service-icon">
+                        <span>
+                            <i class = "fas fa-broom"></i>
+                        </span>
+                    </div>
+                    <div class = "service-content">
+                        <h2>Web Design</h2>
+                        <p>Alisha Anusha Raphael Wilson Ahmad</p>
+                    </div>
+             </article>
+             <article class = "service">
+                    <div class = "service-icon">
+                        <span>
+                            <i class = "fas fa-broom"></i>
+                        </span>
+                    </div>
+                    <div class = "service-content">
+                        <h2>Photoshop & Illustrator</h2>
+                        <p>Alisha Anusha Raphael Wilson Ahmad</p>
+                    </div>
+             </article>
+             <article class = "service">
+                    <div class = "service-icon">
+                        <span>
+                            <i class = "fas fa-broom"></i>
+                        </span>
+                    </div>
+                    <div class = "service-content">
+                        <h2>Coding</h2>
+                        <p>Alisha Anusha Raphael Wilson Ahmad</p>
+                    </div>
+            </article>
      </div
   </body>
