--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -33,7 +33,7 @@
           BestMate Paradise Hotel has been around for 10 years, our mission is to provide a home for all pets that are left lonely when the owners want to go on a trip away from home. We aim to protect, love and caretake for the pets. We make sure all pets have the best health care physically and mentally. We make sure all pets come home in full care, happy and healthy. The hotel provides lots of fun for the pets, having various play areas. The toilets and food areas are kept clean by our caretakers as well.
       </p>
       <div class="inner-container">
-            <article class = "inner-container h1">
+            <article class = "inner-container">
                     <div class = "service-icon">
                         <span>
                             <i class = "fas fa-broom"></i>
@@ -44,7 +44,7 @@
                         <p>Alisha Anusha Raphael Wilson Ahmad</p>
                     </div>
              </article>
-             <article class = "inner-container h1">
+             <article class = "inner-container">
                     <div class = "service-icon">
                         <span>
                             <i class = "fas fa-broom"></i>
@@ -55,7 +55,7 @@
                         <p>Alisha Anusha Raphael Wilson Ahmad</p>
                     </div>
              </article>
-             <article class = "inner-container h1">
+             <article class = "inner-container">
                     <div class = "service-icon">
                         <span>
                             <i class = "fas fa-broom"></i>
