--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -12,7 +12,7 @@
      <div class = "title">
            <h2>About Us</h2>
      </div>
-    <header>
+    <about>
           <div class="heading">BestMate Paradise</div>
             <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
@@ -25,7 +25,7 @@
             <a href="./privacy.html">Privacy Policy</a>
         </div>
         <!-- END OF FIXED HEADER -->
-    </header>
+    </about>
  
     <!-- People -->
         <section class = "customers" id = "customers">
