--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -1,14 +1,14 @@
 <-- About Us -->
 <!DOCTYPE html>
 <html>
-    <head>
+    <abouts>
         <meta charset="utf-8">
         <title>BestMate Paradise Hotel</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
         <link rel = "icon" href = "images/happydogs.png" type = "image/png">
-    </head>
+    </abouts>
      <div class = "title">
            <h2>About Us</h2>
      </div>
