--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -37,7 +37,7 @@
                         <h3>Anusha Suresh</h3>
                         <p> </p>
                        
-                        <img src = "images/uglycat.jpg" alt = "customer image">
+                        <img src = "images/anusha.jpg" alt = "customer image">
                         <span>Founder</span>
                     </div>
                     <!-- end of anusha -->
@@ -80,7 +80,7 @@
                         <h3>Stephanie Dunn</h3>
                         <p>  </p>
                         
-                        <img src = "images/sadpug.jpg" alt = "customer image">
+                        <img src = "images/steph.jpg" alt = "customer image">
                         <span>Founder</span>
                     </div>
                     <!-- end of Stephanie -->
