--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -1,19 +1,19 @@
 <-- About Us -->
 <!DOCTYPE html>
 <html>
-    <abouts>
+    <head>
         <meta charset="utf-8">
         <title>BestMate Paradise Hotel</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
         <link rel = "icon" href = "images/happydogs.png" type = "image/png">
-    </abouts>
-     <div class = "title">
+    </head>
+     <div class = "customer">
            <h2>About Us</h2>
      </div>
-    <about>
-          <div class="heading">BestMate Paradise</div>
+    <abouts>
+          <div class="about">BestMate Paradise</div>
             <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
             <a href="./index.html">Home</a>
