--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -58,7 +58,7 @@
                         <h3>Raphael Lam</h3>
                         <p> </p>
                         
-                        <img src = "images/sadpug.jpg" alt = "customer image">
+                        <img src = "images/raphael.jpg" alt = "customer image">
                         <span>Founder </span>
                     </div>
                     <!-- end of Raphael -->
