--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
-        <link rel = "icon" href = "images/happydogs.png" type = "image/png">
+        <link rel = "icon" href = "images/happydogs.jpeg" type = "image/png">
     </head>
      <div class = "customer">
            <h2>About Us</h2>
@@ -47,7 +47,7 @@
                         <h3>Alisha Rashid</h3>
                         <p> </p>
                         
-                        <img src = "images/fishfuneral.jpg" alt = "customer image">
+                        <img src = "images/cookiemonster.webp.jpg" alt = "customer image">
                         <span>Founder</span>
                     </div>
                     <!-- end of Alisha -->
