--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
-        <link rel = "icon" href = "images/happydogs.jpeg" type = "image/png">
+        <link rel = "icon" href = "images/happydogs.jpeg" type = "image/jpeg">
     </head>
      <div class = "customer">
            <h2>About Us</h2>
