--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -1,19 +1,19 @@
 <-- About Us -->
 <!DOCTYPE html>
 <html>
-    <head>
+    <abouts>
         <meta charset="utf-8">
         <title>BestMate Paradise Hotel</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
-        <link rel = "icon" href = "images/happydogs.jpeg" type = "image/jpeg">
-    </head>
-     <div class = "customer">
+        <link rel = "icon" href = "images/happydogs.png" type = "image/png">
+    </abouts>
+     <div class = "title">
            <h2>About Us</h2>
      </div>
-    <abouts>
-          <div class="about">BestMate Paradise</div>
+    <about>
+          <div class="heading">BestMate Paradise</div>
             <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
             <a href="./index.html">Home</a>
@@ -47,7 +47,7 @@
                         <h3>Alisha Rashid</h3>
                         <p> </p>
                         
-                        <img src = "images/cookiemonster.webp.jpg" alt = "customer image">
+                        <img src = "images/fishfuneral.jpg" alt = "customer image">
                         <span>Founder</span>
                     </div>
                     <!-- end of Alisha -->
@@ -58,7 +58,7 @@
                         <h3>Raphael Lam</h3>
                         <p> </p>
                         
-                        <img src = "images/raphael.jpg" alt = "customer image">
+                        <img src = "images/sadpug.jpg" alt = "customer image">
                         <span>Founder </span>
                     </div>
                     <!-- end of Raphael -->
@@ -151,3 +151,4 @@
         </footer>
         <!-- End of footer -->
     </html>
+
