--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -9,9 +9,9 @@
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
         <link rel = "icon" href = "images/happydogs.png" type = "image/png">
     </abouts>
-     <div class = "title">
+     <section class = "customers">
            <h2>About Us</h2>
-     </div>
+     </section>
     <about>
           <div class="heading">BestMate Paradise</div>
             <!-- FIXED HEADER FOR PAGE -->
