--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -9,9 +9,6 @@
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
         <link rel = "icon" href = "images/happydogs.png" type = "image/png">
     </abouts>
-     <section class = "customers">
-           <h2>About Us</h2>
-     </section>
     <about>
           <div class="heading">BestMate Paradise</div>
             <!-- FIXED HEADER FOR PAGE -->
@@ -28,6 +25,11 @@
     </about>
  
     <!-- People -->
+     <section class = "services sec-width" id = "Services">
+            <div class = "title">
+                <h2>services</h2>
+            </div>
+            <div class = "services-container">
         <section class = "customers" id = "customers">
             <div class = "sec-width">
        
