--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -19,6 +19,7 @@
             <a href="./booking.html">Booking</a>
             <a href="./about.html">About Us</a>
             <a href="./signup.html">Create an Account</a>
+            <a href="./signin.html">Sign In</a>
             <a href="./privacy.html">Privacy Policy</a>
         </div>
         <!-- END OF FIXED HEADER -->
