--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -31,7 +31,7 @@
                 <h2>About Us</h2>
             </div>
             <div class = "services-container">
-        <section class = "abouts" id = "abouts">
+        <section class = "customers" id = "customers">
             <div class = "sec-width">
        
                 <div class = "customers-container">
