--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -1,15 +1,18 @@
 <-- About Us -->
 <!DOCTYPE html>
 <html>
-    <head>
+    <abouts>
         <meta charset="utf-8">
         <title>BestMate Paradise Hotel</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
-        <link rel = "icon" href = "images/logo.png" type = "image/png">
-    </head>
-    <head>
+        <link rel = "icon" href = "images/happydogs.png" type = "image/png">
+    </abouts>
+     <div class = "title">
+           <h2>About Us</h2>
+     </div>
+    <about>
           <div class="heading">BestMate Paradise</div>
             <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
@@ -23,14 +26,9 @@
             <a href="./privacy.html">Privacy Policy</a>
         </div>
         <!-- END OF FIXED HEADER -->
-    </head>
+    </about>
  
     <!-- People -->
-     <section class = "services sec-width" id = "Services">
-            <div class = "title">
-                <h2>About Us</h2>
-            </div>
-            <div class = "services-container">
         <section class = "customers" id = "customers">
             <div class = "sec-width">
        
