--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -106,7 +106,7 @@
                     <div class = "customer">
 
                         <h3>BestMate Paradise Hotel</h3>
-                        <img src = "images/friendlypets.jpg" alt = "customer image">
+                        <img src = "images/friendlypets.jpg" alt = "room image">
                         
                     </div>
                 </div>
