--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -96,12 +96,14 @@
                         <span>Jawad is a coder, illustrater and creator of this website, he has worked as a software engineer and helped the creation of this website. Jawad helped write and create an asethetic website.</span>
                     </div>
                     <!-- end of Jawad -->
-                    <article class = "service">
-                        <div class = "service-content">
-                            <h2>BestMate Paradise Hotel</h2>
-                            <p>BestMate has been around for 10 years and has worked in the local area of Sydney, Darling Harbour in the city. This hotel aims to protect and care for anypets that are in need of a home while the owners take a vacation or have to get away for a while. We aim to make a connection with our owners getting to know their pets as much as possible to help create a comfortable environment, using memberhsip to make personal connections. We allow all ranges of pets to stay in this hotel containing areas of different environment for the different pets. This website aims for the users to simply find what they are looking forward without needing to contact us in person.
-                            </p>
-                        </div>
+
+                   <div class = "customer">
+
+                        <h3>BestMate Paradise Hotel</h3>
+
+                        <span>BestMate has been around for 10 years and has worked in the local area of Sydney, Darling Harbour in the city. This hotel aims to protect and care for anypets that are in need of a home while the owners take a vacation or have to get away for a while. We aim to make a connection with our owners getting to know their pets as much as possible to help create a comfortable environment, using memberhsip to make personal connections. We allow all ranges of pets to stay in this hotel containing areas of different environment for the different pets. This website aims for the users to simply find what they are looking forward without needing to contact us in person.
+                        </span>
+                   </div>
                 </div>
             </div>
         </section>
