--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -104,6 +104,17 @@
                         <span>BestMate has been around for 10 years and has worked in the local area of Sydney, Darling Harbour in the city. This hotel aims to protect and care for anypets that are in need of a home while the owners take a vacation or have to get away for a while. We aim to make a connection with our owners getting to know their pets as much as possible to help create a comfortable environment, using memberhsip to make personal connections. We allow all ranges of pets to stay in this hotel containing areas of different environment for the different pets. This website aims for the users to simply find what they are looking forward without needing to contact us in person.
                         </span>
                    </div>
+                   <div class = "customer">
+
+                        <h3>Staff</h3>
+
+                        <span>Our staff are lovely friendly people that love working with all types of animals and pets. They are professionals working with aniamls who have had a lot of experience with working with them before, working in other animal sancturaries and vets. These staff aim to keep your furry friends happy and cared for. Our staff are well trained specifically for this hotel, completing a course with animals and a unit of modules for this specific place. Our staff are all close and are eager to answer any questions or querries that you have about your pets stay or anything admin questions about this organisation. </span>
+                   </div>
+                   <div class = "customer">
+
+                        <h3>Customers</h3>
+
+                        <span>We began a membership to make sure we stay close and connected with our customers, allowing this membership to create a relationship where the customer can come back and already have an account to have their pet set up to be in the hotel already. This also allows the customer to adjust when adding more pets or mroe requirements for their pets. This website helps create this connection automatically, allowing the staff to receive all requirements and be updated before the pet comes into the hotel, facillitating the process for the customers, pets and staff. The customers are able to ask any questions to any of our staff and allowed to add any requirements about their pet.</div>
                 </div>
             </div>
         </section>
